Rename link on the news carrousel and add installation link on subprojects

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -87,6 +87,10 @@
               <h3 class="mb-0 text-dark">Karaf Cellar <span class="text-muted">4.1.1</span></h3>
               <div class="mb-1 text-muted">October 16, 2017</div>
               <p class="card-text mb-auto">
+                Installation Instructions:
+                  <a href="#cellar-installation">installation</a>
+              </p>
+              <p class="card-text mb-auto">
                 Source Distribution :
                   <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.1.1/apache-karaf-cellar-4.1.1-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.1.1/apache-karaf-cellar-4.1.1-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.1/apache-karaf-cellar-4.1.1-src.tar.gz.sha1">SHA1</a>] - 
                                 <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.1.1/apache-karaf-cellar-4.1.1-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.1.1/apache-karaf-cellar-4.1.1-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.1/apache-karaf-cellar-4.1.1-src.zip.sha1">SHA1</a>]
@@ -104,6 +108,10 @@
               <h3 class="mb-0 text-dark">Karaf Cave <span class="text-muted">4.1.0</span></h3>
               <div class="mb-1 text-muted">January 2, 2018</div>
               <p class="card-text mb-auto">
+                Installation Instructions:
+                  <a href="#cave-installation">installation</a>
+              </p>
+              <p class="card-text mb-auto">
                 Source Distribution :
                   <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.tar.gz.sha1">SHA1</a>] - 
                                 <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.zip.sha1">SHA1</a>]
@@ -118,6 +126,10 @@
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
               <h3 class="mb-0 text-dark">Karaf Decanter <span class="text-muted">2.0.0</span></h3>
               <div class="mb-1 text-muted">Ferbruary 7, 2018</div>
+              <p class="card-text mb-auto">
+                Installation Instructions:
+                  <a href="#decanter-installation">installation</a>
+              </p>
               <p class="card-text mb-auto">
                 Source Distribution :
                   <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz.sha1">SHA1</a>] - 
@@ -290,7 +302,7 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-server"></i> Karaf Cellar</h2>
 
               <div class="pb-4 mb-3">
-                <h3 class="text-dark">Installation</h3>
+                <h3 class="text-dark" id="cellar-installation">Installation</h3>
 
                 Apache Karaf Cellar is a complete clustering solution for Apache Karaf Container.
                 <br/>
@@ -383,6 +395,10 @@
                           <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
                           <h3 class="mb-0 text-dark">Karaf Cellar <span class="text-muted">4.0.4</span></h3>
                           <div class="mb-1 text-muted">May 17, 2017</div>
+              <p class="card-text mb-auto">
+                Installation Instructions:
+                  <a href="#cellar-installation">installation</a>
+              </p>
                           <p class="card-text mb-auto">
                             Source Distribution :
                               <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.0.4/apache-karaf-cellar-4.0.4-src.tar.gz.sha1">SHA1</a>] - 
@@ -407,7 +423,7 @@
 
 
 
-      <!-- Karaf Container
+      <!-- Karaf Cave 
       ================================================== -->
 
       <div class="container">
@@ -417,7 +433,7 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-warehouse"></i> Karaf Cave</h2>
 
               <div class="pb-4 mb-3">
-                <h3 class="text-dark">Installation</h3>
+                <h3 class="text-dark" id="cave-installation">Installation</h3>
 
                 <p>
                 Apache Karaf Cave is a complete artifacts repository (OSGi Repository, OBR, Maven) solution for Apache Karaf Container.
@@ -503,6 +519,10 @@
                           <strong class="d-inline-block mb-2 text-warning"><i class="fas fa-circle"></i> Latest release</strong>
                           <h3 class="mb-0 text-dark">Karaf Cave <span class="text-muted">4.0.0</span></h3>
                           <div class="mb-1 text-muted">Ferbuary 4, 2016</div>
+              <p class="card-text mb-auto">
+                Installation Instructions:
+                  <a href="#cave-installation">installation</a>
+              </p>
                           <p class="card-text mb-auto">
                             Source Distribution :
                               <a href="http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.sha1">SHA1</a>] - 
@@ -540,7 +560,7 @@
 
 
 
-      <!-- Karaf Container
+      <!-- Karaf Decanter 
       ================================================== -->
 
       <div class="container">
@@ -550,7 +570,7 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-tachometer-alt"></i> Karaf Decanter</h2>
 
               <div class="pb-4 mb-3">
-                <h3 class="text-dark">Installation</h3>
+                <h3 class="text-dark" id="decanter-installation">Installation</h3>
 
                 <p>
                 Apache Karaf Decanter is a complete monitoring solution, working with any Karaf Container version.<br/>
@@ -601,7 +621,7 @@
 
       </div><!-- /.karaf - container -->
 
-      <!-- Karaf Container
+      <!-- Verify 
       ================================================== -->
 
       <div class="container">
