--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,28 +79,28 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 4.2.0 has been released ! (9/4/18)</strong> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a href="news.html">Release Notes</a>)</p>
+                <p><strong>Karaf Container 4.2.0 has been released ! (9/4/18)</strong> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 3.0.9 has been released! (2/3/18)</strong> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a href="news.html">Release Notes</a>)</p>
+                <p><strong>Karaf Container 3.0.9 has been released! (2/3/18)</strong> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Container 4.1.5 has been released! (15/2/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Release Notes</a>)</p>
+                <p><strong>Karaf Container 4.1.5 has been released! (15/2/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Karaf Decanter 2.0.0 has been released! (6/2/18)</strong> - This is a new Decanter series, providing new features and bug fixes. It's designed to work specifically on Apache Karaf 4.x. (<a href="news.html">Release Notes</a>)</p>
+                <p><strong>Karaf Decanter 2.0.0 has been released! (6/2/18)</strong> - This is a new Decanter series, providing new features and bug fixes. It's designed to work specifically on Apache Karaf 4.x. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
