--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -79,6 +79,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Container 4.1.6 has been released! (6/8/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Container 4.2.0 has been released ! (9/4/18)</strong> - This is the first GA release on the 4.2.x series. We invite users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
