--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -100,6 +100,13 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Container 4.1.6 has been released ! <span class="text-muted">August 6, 2018</span></h3>
+                <p>Ths is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements.</p>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342748" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Container 4.2.0 has been released ! <span class="text-muted">April 9, 2018</span></h3>
                 <p>Ths is the first GA release on the 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and new features.</p>
                 <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
