--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -83,6 +83,16 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>4.1.5</td>
+                            <td><a href="http://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.tar.gz.sha1">SHA1</a>]<br>
+                                <a href="http://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5.zip.sha1">SHA1</a>]
+                            </td>
+                            <td><a href="http://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.tar.gz.sha1">SHA1</a>]<br>
+                                <a href="http://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.1.5/apache-karaf-4.1.5-src.zip.sha1">SHA1</a>]
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342294')">Release Notes</a></td>
+                        </tr>
+                        <tr>
                             <td>4.2.0.M2</td>
                             <td><a href="http://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.tar.gz.sha1">SHA1</a>]<br>
                                 <a href="http://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.0.M2/apache-karaf-4.2.0.M2.zip.sha1">SHA1</a>]
