--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,9 +74,18 @@
           <li data-target="#myCarousel" data-slide-to="1"></li>
           <li data-target="#myCarousel" data-slide-to="2"></li>
           <li data-target="#myCarousel" data-slide-to="3"></li>
+          <li data-target="#myCarousel" data-slide-to="4"></li>
+          <li data-target="#myCarousel" data-slide-to="5"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
+            <div class="container">
+              <div class="carousel-caption">
+                <p><strong>Karaf Container 4.2.1 has been released! (21/8/18)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Container 4.1.6 has been released! (6/8/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
@@ -150,7 +159,7 @@
             <h2 class="featurette-heading">Run your applications in <span class="text-muted">Karaf Container</span></h2>
             <p class="lead">Karaf is a lightweight, powerful, and enterprise ready container powered by OSGi. Karaf is a modern and polymorphic container.
             By polymorphic, it means that Karaf can host any kind of applications: OSGi, Spring, WAR, and much more.</p>
-            <p>Last version <strong>4.2.0</strong> - (09/04/18)</p>
+            <p>Last version <strong>4.2.1</strong> - (21/08/18)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5">
