--- a/src/main/webapp/projects.html
+++ b/src/main/webapp/projects.html
@@ -77,7 +77,7 @@
               </h3>
               <p class="card-text mb-auto">Karaf Container is a modern and polymorphic container.</p>
               <p>
-                <small class="text-muted">Latest 4.2.0 <a href="download.html"><i class="fas fa-download"></i></a></small>
+                <small class="text-muted">Latest 4.2.1 <a href="download.html"><i class="fas fa-download"></i></a></small>
               </p>
             </div>
           </div>
@@ -91,7 +91,7 @@
               </h3>
               <p class="card-text mb-auto">Karaf Cellar is a clustering solution for Karaf.</p>
               <p>
-                <small class="text-muted">Latest 4.1.0 <a href="download.html"><i class="fas fa-download"></i></a></small>
+                <small class="text-muted">Latest 4.1.1 <a href="download.html"><i class="fas fa-download"></i></a></small>
               </p>
             </div>
           </div>
@@ -264,6 +264,16 @@
                     <div class="card-body text-dark">
                       <h5 class="card-title">Instances management</h5>
                       <p class="card-text">You can manage several children instances inside the Karaf Container root instance. It's a very convenient way to test applications or configurations without impacting your existing running instances.</p>
+                      <p class="card-text"><small class="text-muted">Since 4.x</small></p>
+                    </div>
+                  </div>
+              </div>
+
+              <div class="card-deck w-34 mb-3">
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title text-dark">Docker</h5>
+                      <p class="card-text">Manage your Docker containers and images via Karaf shell console, provisionning a running instance in the simpliest way.</p>
                       <p class="card-text"><small class="text-muted">Since 4.x</small></p>
                     </div>
                   </div>
