--- a/src/main/webapp/community.html
+++ b/src/main/webapp/community.html
@@ -47,6 +47,9 @@
                   <a class="nav-link" href="community.html">Community <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="stories.html">Stories</span></a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link disabled" href="https://www.apache.org"><img src="images/apache-feather-tm-new.png"/></a>
                 </li>
               </ul>
