--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,6 +81,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Cave 4.1.1 has been released! (7/9/18)</strong> - This is an update patch for Apache Cave 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Container 4.2.1 has been released! (21/8/18)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -110,13 +117,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Container 4.1.5 has been released! (15/2/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Decanter 2.0.0 has been released! (6/2/18)</strong> - This is a new Decanter series, providing new features and bug fixes. It's designed to work specifically on Apache Karaf 4.x. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -240,7 +240,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">Manage your artifacts repositories with  <span class="text-muted">Karaf Cave.</span></h2>
             <p class="lead">Karaf Cave is an implementation of OSGi Repository specification. It can be used by the Karaf Features Resolver to provide resources, dealing with the requirements and capabilities of artifacts.</p>
-            <p>Last version <strong>4.1.0</strong> - (02/01/18)</p>
+            <p>Last version <strong>4.1.1</strong> - (07/09/18)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
