--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -695,6 +695,23 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>4.1.0</td>
+                            <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                            <td><a href="http://archive.apache.org/dist/karaf/cave/4.1.0/pache-karaf-cave-4.1.0-src.tar.gz">tar.gz</a> | <a href="http://archive.apache.org/dist/karaf/cave/4.1.0/apache-karaf-cave-4.1.0-src.zip">zip</a>
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12340462')">Release Notes</a></td>
+                        </tr>
+                        <tr>
+                            <td>4.0.0</td>
+                            <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                            <td><a
+                                    href="http://archive.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz">tar.gz</a>
+                                |
+                                <a href="http://archive.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip">zip</a>
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12332260')">Release Notes</a></td>
+                        </tr>
+                        <tr>
                             <td>4.0.0</td>
                             <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                             <td><a
