--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -99,6 +99,13 @@
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
+              <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Cave 4.1.1 has been released ! <span class="text-muted">September 9, 2018</span></h3>
+                <p>This release contains fixes on the Maven repository management, the Feature gateway, the REST services (for both repository and deployer).</p>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342356" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Container 4.2.1 has been released ! <span class="text-muted">August 21, 2018</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
