--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -221,7 +221,7 @@
                         <td class="text-success">Stable</td>
                         <td>4.1.6</td>
                         <td>4.1.7</td>
-                        <td>11/18</td>
+                        <td>16 Nov 18</td>
                     </tr>
                     <tr>
                         <td>4.2.x</td>
@@ -230,7 +230,7 @@
                         <td class="text-success">Stable</td>
                         <td>4.2.1</td>
                         <td>4.2.2</td>
-                        <td>10/18</td>
+                        <td>23 Nov 18</td>
                     </tr>
                   </tbody>
                 </table>
@@ -376,9 +376,17 @@
                         <td>4.0.x</td>
                         <td>4.0.x</td>
                         <td class="text-success">Stable</td>
-                        <td>4.0.3</td>
                         <td>4.0.4</td>
-                        <td>12/17</td>
+                        <td>4.0.5</td>
+                        <td>5 Oct 2018</td>
+                    </tr>
+                    <tr>
+                        <td>4.1.x</td>
+                        <td>4.1.x / 4.2.x</td>
+                        <td class="text-success">Stable</td>
+                        <td>4.1.1</td>
+                        <td>4.1.2</td>
+                        <td>5 Oct 2018</td>
                     </tr>
                   </tbody>
                 </table>
@@ -502,7 +510,7 @@
                         <td class="text-success">Stable</td>
                         <td>4.1.1</td>
                         <td>4.1.2</td>
-                        <td>12/18</td>
+                        <td>8 Dec 18</td>
                     </tr>
                   </tbody>
                 </table>
@@ -608,9 +616,9 @@
                         <td>2.0.x</td>
                         <td>4.x</td>
                         <td class="text-success">Stable</td>
-                        <td>2.0.0</td>
                         <td>2.1.0</td>
-                        <td>04/18</td>
+                        <td>2.2.0</td>
+                        <td>14 Dec 18</td>
                     </tr>
                   </tbody>
                 </table>
