--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -761,12 +761,22 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>2.0.0</td>
+                            <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                            <td><a
+                                    href="http://archive.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.tar.gz">tar.gz</a>
+                                |
+                                <a href="http://archive.apache.org/dist/karaf/decanter/2.0.0/apache-karaf-decanter-2.0.0-src.zip">zip</a>
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12341053')">Release Notes</a></td>
+                        </tr>
+                        <tr>
                             <td>1.4.0</td>
                             <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                             <td><a
-                                    href="http://archive.apache.org/dist/karaf/decanter/1.3.0/apache-karaf-decanter-1.4.0-src.tar.gz">tar.gz</a>
+                                    href="http://archive.apache.org/dist/karaf/decanter/1.4.0/apache-karaf-decanter-1.4.0-src.tar.gz">tar.gz</a>
                                 |
-                                <a href="http://archive.apache.org/dist/karaf/decanter/1.3.0/apache-karaf-decanter-1.4.0-src.zip">zip</a>
+                                <a href="http://archive.apache.org/dist/karaf/decanter/1.4.0/apache-karaf-decanter-1.4.0-src.zip">zip</a>
                             </td>
                             <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12338800')">Release Notes</a></td>
                         </tr>
