--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -81,6 +81,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Decanter 2.1.0 has been released! (12/9/18)</strong> - This is an update patch for Apache Decanter 2.x.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Cave 4.1.1 has been released! (7/9/18)</strong> - This is an update patch for Apache Cave 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -110,13 +117,6 @@
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Container 3.0.9 has been released! (2/3/18)</strong> - This is an update patch for Apache Karaf 3.0.x, containing minor fixes and dependency upgrades. (<a href="news.html">Details</a>)</p>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container">
-              <div class="carousel-caption">
-                <p><strong>Karaf Container 4.1.5 has been released! (15/2/18)</strong> - This is an update patch for Apache Karaf 4.1.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
@@ -265,7 +265,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Monitoring, alerting, and BAM with <span class="text-muted">Karaf Decanter.</span></h2>
             <p class="lead">You need a monitoring solution for Karaf and related ? You need a BAM (Business Activity Monitoring) platform for your application ? Karaf Decanter can be very convenient for you ! Decanter provides ready to use monitoring solution. It's also completely extensible and customizable.</p>
-            <p>Last version <strong>2.0.0</strong> - (06/02/18)</p>
+            <p>Last version <strong>2.1.0</strong> - (12/09/18)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
