--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -100,6 +100,21 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3">
+                <h3 class="text-dark">Karaf Decanter 2.1.0 has been released ! <span class="text-muted">September 12, 2018</span></h3>
+                <p>This is a major maintenance release on Decanter 2.x series. Especially, it provides:</p>
+                <ul>
+                  <li>New JDBC collector</li>
+                  <li>Fix and improvements on the JMS collector and appender</li>
+                  <li>Upgrade Kafka collector and appender to support Kafka 1.x</li>
+                  <li>Improvements on the JMX collector to be able to execute MBean operations</li>
+                  <li>Add new raw and parser services</li>
+                </ul>
+                <p>and much more !</p>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12342684" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Cave 4.1.1 has been released ! <span class="text-muted">September 9, 2018</span></h3>
                 <p>This release contains fixes on the Maven repository management, the Feature gateway, the REST services (for both repository and deployer).</p>
                 <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
