--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -146,6 +146,7 @@
 
       <!-- Karaf Container
       ================================================== -->
+      <div id="karaf" class="pb-5"></div>
 
       <div class="container">
 
@@ -232,8 +233,11 @@
                         <td>4.2.2</td>
                         <td>23 Nov 18</td>
                     </tr>
+
                   </tbody>
+
                 </table>
+                <div id="container416"></div>
               </div><!-- /.blog-post -->
 
 
@@ -262,19 +266,17 @@
                       </div>
                     </div>
                 </div>
-
-
+                <div id="cellar"></div>
               </div><!-- /.blog-post -->
 
             </div><!-- /.blog-main -->
         </div>
-
+        
       </div><!-- /.karaf - container -->
 
 
       <!-- Karaf Cellar
       ================================================== -->
-
       <div class="container">
 
         <div class="row mb-5 mt-5">
@@ -370,6 +372,7 @@
                     </tr>
                   </tbody>
                 </table>
+                <div id="cave"></div>
               </div><!-- /.blog-post -->
             </div><!-- /.blog-main -->
         </div>
@@ -380,7 +383,7 @@
 
       <!-- Karaf Cave 
       ================================================== -->
-
+      
       <div class="container">
 
         <div class="row mb-5 mt-5">
@@ -461,6 +464,7 @@
                     </tr>
                   </tbody>
                 </table>
+                <div id="decanter"></div>
               </div><!-- /.blog-post -->
             </div><!-- /.blog-main -->
         </div>
