Change release series order

--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -174,29 +174,29 @@
                   </thead>
                   <tbody>
                     <tr>
-                        <td>2.2.x</td>
-                        <td>4.2</td>
-                        <td>5 / 6</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>2.2.9</td>
-                        <td></td>
-                        <td></td>
+                      <td>4.2.x</td>
+                      <td>6</td>
+                      <td>8 / 9 / 10</td>
+                      <td class="text-success">Stable</td>
+                      <td>4.2.1</td>
+                      <td>4.2.2</td>
+                      <td>23 Nov 18</td>
                     </tr>
                     <tr>
-                        <td>2.3.x</td>
-                        <td>4.3</td>
-                        <td>5 / 6 / 7</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>2.3.12</td>
-                        <td></td>
-                        <td></td>
+                        <td>4.1.x</td>
+                        <td>6</td>
+                        <td>8</td>
+                        <td class="text-success">Stable</td>
+                        <td>4.1.6</td>
+                        <td>4.1.7</td>
+                        <td>16 Nov 18</td>
                     </tr>
                     <tr>
-                        <td>2.4.x</td>
+                        <td>4.0.x</td>
                         <td>5</td>
                         <td>7 / 8</td>
                         <td class="text-danger">Not Active</td>
-                        <td>2.4.4</td>
+                        <td>4.0.10</td>
                         <td></td>
                         <td></td>
                     </tr>
@@ -210,31 +210,31 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td>4.0.x</td>
+                        <td>2.4.x</td>
                         <td>5</td>
                         <td>7 / 8</td>
                         <td class="text-danger">Not Active</td>
-                        <td>4.0.10</td>
+                        <td>2.4.4</td>
                         <td></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td>4.1.x</td>
-                        <td>6</td>
-                        <td>8</td>
-                        <td class="text-success">Stable</td>
-                        <td>4.1.6</td>
-                        <td>4.1.7</td>
-                        <td>16 Nov 18</td>
+                        <td>2.3.x</td>
+                        <td>4.3</td>
+                        <td>5 / 6 / 7</td>
+                        <td class="text-danger">Not Active</td>
+                        <td>2.3.12</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>4.2.x</td>
-                        <td>6</td>
-                        <td>8 / 9 / 10</td>
-                        <td class="text-success">Stable</td>
-                        <td>4.2.1</td>
-                        <td>4.2.2</td>
-                        <td>23 Nov 18</td>
+                        <td>2.2.x</td>
+                        <td>4.2</td>
+                        <td>5 / 6</td>
+                        <td class="text-danger">Not Active</td>
+                        <td>2.2.9</td>
+                        <td></td>
+                        <td></td>
                     </tr>
 
                   </tbody>
@@ -334,10 +334,26 @@
                   </thead>
                   <tbody>
                     <tr>
-                        <td>2.2.x</td>
-                        <td>2.2.x</td>
-                        <td class="text-danger">Not Active</td>
-                        <td>2.2.6</td>
+                      <td>4.1.x</td>
+                      <td>4.1.x / 4.2.x</td>
+                      <td class="text-success">Stable</td>
+                      <td>4.1.1</td>
+                      <td>4.1.2</td>
+                      <td>5 Oct 2018</td>
+                    </tr>
+                    <tr>
+                        <td>4.0.x</td>
+                        <td>4.0.x</td>
+                        <td class="text-success">Stable</td>
+                        <td>4.0.4</td>
+                        <td>4.0.5</td>
+                        <td>5 Oct 2018</td>
+                    </tr>
+                    <tr>
+                        <td>3.0.x</td>
+                        <td>3.0.x</td>
+                        <td class="text-warning">Maintenance</td>
+                        <td>3.0.3</td>
                         <td></td>
                         <td></td>
                     </tr>
@@ -350,28 +366,12 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td>3.0.x</td>
-                        <td>3.0.x</td>
-                        <td class="text-warning">Maintenance</td>
-                        <td>3.0.3</td>
+                        <td>2.2.x</td>
+                        <td>2.2.x</td>
+                        <td class="text-danger">Not Active</td>
+                        <td>2.2.6</td>
                         <td></td>
                         <td></td>
-                    </tr>
-                    <tr>
-                        <td>4.0.x</td>
-                        <td>4.0.x</td>
-                        <td class="text-success">Stable</td>
-                        <td>4.0.4</td>
-                        <td>4.0.5</td>
-                        <td>5 Oct 2018</td>
-                    </tr>
-                    <tr>
-                        <td>4.1.x</td>
-                        <td>4.1.x / 4.2.x</td>
-                        <td class="text-success">Stable</td>
-                        <td>4.1.1</td>
-                        <td>4.1.2</td>
-                        <td>5 Oct 2018</td>
                     </tr>
                   </tbody>
                 </table>
@@ -380,7 +380,7 @@
             </div><!-- /.blog-main -->
         </div>
 
-      </div><!-- /.karaf - container -->
+      </div><!-- /.karaf - cellar -->
 
 
 
@@ -442,12 +442,12 @@
                   </thead>
                   <tbody>
                     <tr>
-                        <td>3.0.x</td>
-                        <td>3.0.x</td>
-                        <td class="text-warning">Maintenance</td>
-                        <td>3.0.0</td>
-                        <td></td>
-                        <td></td>
+                      <td>4.1.x</td>
+                      <td>4.1.x</td>
+                      <td class="text-success">Stable</td>
+                      <td>4.1.1</td>
+                      <td>4.1.2</td>
+                      <td>8 Dec 18</td>
                     </tr>
                     <tr>
                         <td>4.0.x</td>
@@ -458,12 +458,12 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td>4.1.x</td>
-                        <td>4.1.x</td>
-                        <td class="text-success">Stable</td>
-                        <td>4.1.1</td>
-                        <td>4.1.2</td>
-                        <td>8 Dec 18</td>
+                        <td>3.0.x</td>
+                        <td>3.0.x</td>
+                        <td class="text-warning">Maintenance</td>
+                        <td>3.0.0</td>
+                        <td></td>
+                        <td></td>
                     </tr>
                   </tbody>
                 </table>
@@ -472,7 +472,7 @@
             </div><!-- /.blog-main -->
         </div>
 
-      </div><!-- /.karaf - container -->
+      </div><!-- /.karaf - cave -->
 
 
 
