--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -128,7 +128,7 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
               <h3 class="mb-0 text-dark">Karaf Decanter <span class="text-muted">2.1.0</span></h3>
-              <div class="mb-1 text-muted">Ferbruary 7, 2018</div>
+              <div class="mb-1 text-muted">September 12, 2018</div>
               <p class="card-text mb-auto">
                 Installation Instructions:
                   <a href="#decanter-installation">installation</a>
